fix overflow

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,6 @@ body {
     padding: 0;
     margin: 0;
     font-family: 'Roboto', sans-serif;
-    overflow: hidden;
 }
 
 * {
